--- a/app/src/main/res/layout/fragment_summary.xml
+++ b/app/src/main/res/layout/fragment_summary.xml
@@ -13,6 +13,7 @@
         android:src="@drawable/ic_globe_icon" />
 
     <TextView
+        android:elevation="4dp"
         android:id="@+id/tv_cases"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -26,16 +27,20 @@
         android:text="Infected:"/>
 
     <TextView
+        android:elevation="4dp"
         android:id="@+id/tv_deaths"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_cases"
-        android:layout_margin="20dp"
-        android:padding="10dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/blackbackground"
-        android:textColor="@color/white"
         android:gravity="center"
-        android:textSize="18sp"
-        android:text="Deaths:"/>
+        android:padding="10dp"
+        android:text="Deaths:"
+        android:textColor="@color/white"
+        android:textSize="18sp" />
 
 </RelativeLayout>
