--- a/app/src/main/res/layout/fragment_summary.xml
+++ b/app/src/main/res/layout/fragment_summary.xml
@@ -4,12 +4,13 @@
     android:layout_height="match_parent">
 
     <ImageView
+        android:elevation="5dp"
         android:id="@+id/iv_globe"
-        android:layout_marginTop="20dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
         android:layout_width="match_parent"
         android:layout_height="300dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="20dp"
         android:src="@drawable/ic_globe_icon" />
 
     <TextView
