Extended functionality of case searching - now it also displays statistics over regions

--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -28,8 +28,7 @@
             android:id="@+id/search_tv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:text="Test info"/>
+            android:textSize="18sp"/>
     </ScrollView>
 
 </RelativeLayout>
