--- a/app/src/main/res/layout/dialog_countries.xml
+++ b/app/src/main/res/layout/dialog_countries.xml
@@ -16,8 +16,8 @@
         android:id="@+id/dialog_rv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:scrollbars="vertical"
         android:layout_below="@+id/country_et"
         android:layout_alignParentStart="true"
-        android:paddingHorizontal="20dp" />
+        android:paddingHorizontal="20dp"
+        android:scrollbars="vertical" />
 </RelativeLayout>
