--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -26,6 +26,7 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/search_tv_country"
         android:layout_marginHorizontal="10dp"
-        android:scrollbars="vertical"></androidx.recyclerview.widget.RecyclerView>
+        android:scrollbars="vertical"
+        android:elevation="2dp"/>
 
 </RelativeLayout>
