--- a/app/src/main/res/layout/item_countries.xml
+++ b/app/src/main/res/layout/item_countries.xml
@@ -7,6 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/item_country_name"
-        android:textSize="18sp"/>
+        android:textSize="18sp"
+        android:layout_marginVertical="5dp"/>
 
 </RelativeLayout>
