Created simple fade-in-out, slide from top to bottom and from bottom to top animation files. Added custom animations to AlertDialog, added delay, based on animation duration to prevent fragment manager fragment swap and animation overlap. Attached animation to bottom navigation bar.

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,4 +15,9 @@
         <item name="fontFamily">sans-serif</item>
         <item name="android:textColorPrimaryInverse">#FFF</item>
     </style>
+    
+    <style name="DialogTheme">
+        <item name="android:windowEnterAnimation">@anim/fade_in</item>
+        <item name="android:windowExitAnimation">@anim/fade_out</item>
+    </style>
 </resources>
