--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -16,6 +16,7 @@
         android:background="@drawable/background_primary_rounded"
         android:backgroundTint="?colorPrimaryVariant"
         android:gravity="center"
+        android:elevation="5dp"
         android:text="Country name"
         android:textColor="?android:textColorPrimaryInverse"
         android:textSize="26sp" />
@@ -26,8 +27,7 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/search_tv_country"
         android:layout_marginHorizontal="10dp"
-        android:scrollbars="vertical"
-        android:elevation="2dp"/>
+        android:scrollbars="vertical" />
 
     <ProgressBar
         android:id="@+id/progressBar"
