--- a/app/src/main/res/layout/fragment_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_bottom_sheet.xml
@@ -4,8 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/background_primary_toprounded"
-    android:orientation="horizontal"
-    android:elevation="10dp">
+    android:orientation="horizontal">
 
     <RelativeLayout
         android:id="@+id/relative_cases"
