--- a/app/src/main/res/layout/fragment_history_tab.xml
+++ b/app/src/main/res/layout/fragment_history_tab.xml
@@ -1,13 +1,20 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<RelativeLayout
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-    <androidx.recyclerview.widget.RecyclerView
+    android:paddingHorizontal="20dp">
+
+    <androidx.recyclerview.widget.RecyclerView xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/history_recycler_tab_rv"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".fragments.HistoryTabFragment"/>
+        tools:context=".fragments.HistoryTabFragment" />
+
+    <ProgressBar
+        android:id="@+id/history_progress_bar"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_centerInParent="true"
+        android:visibility="gone" />
 
 </RelativeLayout>
