--- a/app/src/main/res/layout/fragment_vaccinated.xml
+++ b/app/src/main/res/layout/fragment_vaccinated.xml
@@ -1,14 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.VaccinatedFragment">
+    tools:context=".fragments.VaccinatedPerCountryFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/vaccinated_tv_country"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginHorizontal="15dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/background_primary_rounded"
+        android:backgroundTint="?colorPrimaryVariant"
+        android:gravity="center"
+        android:text="Country name"
+        android:textColor="?android:textColorPrimaryInverse"
+        android:textSize="26sp" />
 
-</FrameLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/vaccinated_tv_country"
+            android:layout_alignParentStart="true"
+            android:paddingHorizontal="20dp"
+            >
+            <include
+                android:id="@+id/vaccinated_view_layout"
+                layout="@layout/history_tab_recycler_item"/>
+        </RelativeLayout>
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_centerInParent="true"
+        android:visibility="gone"/>
+
+
+</RelativeLayout>
