--- a/app/src/main/res/layout/fragment_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_bottom_sheet.xml
@@ -12,6 +12,7 @@
         android:layout_height="match_parent"
         android:layout_marginHorizontal="20dp"
         android:layout_marginVertical="10dp"
+        android:background="@drawable/background_primary_rounded_ripple"
         android:layout_weight="1">
 
         <ImageView
@@ -24,9 +25,9 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Cases"
+            android:layout_below="@+id/iv_search"
             android:gravity="center"
-            android:layout_below="@+id/iv_search"/>
+            android:text="Cases" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -35,6 +36,7 @@
         android:layout_height="match_parent"
         android:layout_marginHorizontal="20dp"
         android:layout_marginVertical="10dp"
+        android:background="@drawable/background_primary_rounded_ripple"
         android:layout_weight="1">
 
         <ImageView
@@ -58,6 +60,7 @@
         android:layout_height="match_parent"
         android:layout_marginHorizontal="20dp"
         android:layout_marginVertical="10dp"
+        android:background="@drawable/background_primary_rounded_ripple"
         android:layout_weight="1">
 
         <ImageView
